<resources>
    <string name="app_name">SafeWalk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_contact_details">ContactDetailsActivity</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="driving">Driving</string>
    <string name="transit">Transit</string>
    <string name="walking">Walking</string>
    <string name="from_contacts">From Contacts</string>
</resources>
